src/resources/postcss/views/month/_multiday-event.pcss
.tribe-events {

	/* -----------------------------------------------------------------------------
	 * Multiday Event
	 * ----------------------------------------------------------------------------- */

	.tribe-events-calendar-month__multiday-event-wrapper {

		@media (--viewport-medium) {
			height: 19px;
			margin-bottom: var(--spacer-0);
			position: relative;
		}
	}

	/* .tribe-events-calendar-month__multiday-event {} */

	.tribe-events-calendar-month__multiday-event--width-2 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(200% + 1px);
		}
	}

	.tribe-events-calendar-month__multiday-event--width-3 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(300% + 2px);
		}
	}

	.tribe-events-calendar-month__multiday-event--width-4 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(400% + 3px);
		}
	}

	.tribe-events-calendar-month__multiday-event--width-5 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(500% + 4px);
		}
	}

	.tribe-events-calendar-month__multiday-event--width-6 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(600% + 5px);
		}
	}

	.tribe-events-calendar-month__multiday-event--width-7 {

		.tribe-events-calendar-month__multiday-event-bar {
			width: calc(700% + 6px);
		}
	}

	/* .tribe-events-calendar-month__multiday-event--empty {} */

	.tribe-events-calendar-month__multiday-event--display {

		.tribe-events-calendar-month__multiday-event-hidden {
			position: absolute;
			width: 100%;
		}
	}

	.tribe-events-calendar-month__multiday-event-hidden {
		height: 100%;
		opacity: 0;
		position: relative;
		z-index: var(--z-index-multiday-event);
	}

	.tribe-events-calendar-month__multiday-event-bar {
		background-color: var(--color-background);
		overflow: hidden;
		position: relative;
		width: 100%;
		z-index: var(--z-index-multiday-event-bar);
	}

	.tribe-events-calendar-month__multiday-event--start {

		.tribe-events-calendar-month__multiday-event-bar {
			border-top-left-radius: 9.5px;
			border-bottom-left-radius: 9.5px;
		}
	}

	.tribe-events-calendar-month__multiday-event--end {

		.tribe-events-calendar-month__multiday-event-bar {
			border-top-right-radius: 9.5px;
			border-bottom-right-radius: 9.5px;
		}
	}

	.tribe-events-calendar-month__multiday-event-bar-inner {
		align-items: center;
		background-color: var(--color-accent-primary-multiday);
		cursor: pointer;
		display: flex;
		flex-wrap: nowrap;
		padding: 1px var(--spacer-3);
		transition: var(--transition-background-color);

		&:hover,
		&:focus {
			background-color: var(--color-accent-primary-multiday-hover);
		}
	}

	.tribe-events-calendar-month__multiday-event-bar-inner--focus,
	.tribe-events-calendar-month__multiday-event-bar-inner--hover {
		background-color: var(--color-accent-primary-multiday-hover);
	}

	.tribe-events-calendar-month__multiday-event--past {

		.tribe-events-calendar-month__multiday-event-bar-inner {
			background-color: var(--color-background-secondary);

			&:hover,
			&:focus {
				background-color: var(--color-background-secondary);
			}
		}

		.tribe-events-calendar-month__multiday-event-bar-inner--focus,
		.tribe-events-calendar-month__multiday-event-bar-inner--hover {
			background-color: var(--color-background-secondary);
		}

		.tribe-events-calendar-month__multiday-event-bar-featured-icon,
		.tribe-events-calendar-month__multiday-event-bar-title {
			opacity: 0.5;
		}
	}

	.tribe-events-calendar-month__multiday-event-bar-featured-icon {
		flex: none;
		margin-right: 5px;
	}

	.tribe-events-calendar-month__multiday-event-bar-title {
		flex: auto;
		font-weight: var(--font-weight-regular);
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

